<?xml version="1.0" encoding="utf-8"?>
<!--changed RelativeLayout to ScrollView to prevent content overflow in menu-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.myportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <!--new layout for the app-->
    <!--changed the colors for the layout and button to use colors.xml for code reusable! -->
    <!--xml style 속성도 override 기능을 가지고있다 틀을 상속받고 세부는 조절가능!-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorMainLayoutBackGround"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="15dp"
            android:gravity="center"
            android:text="My Nanodegree Apps!"
            android:textSize="25dp"
            android:textColor="#000000"/>

        <!--load button style resources-->
        <Button
            style="@style/appButton"
            android:id="@+id/spotifyStreamer"
            android:onClick="clickOnSpotify"
            android:text="@string/spotifyButton"
            android:layout_marginTop="50dp"
            />

        <Button
            style="@style/appButton"
            android:id="@+id/scoresApp"
            android:onClick="clickOnScores"
            android:text="@string/scoresButton"
            />

        <Button
            style="@style/appButton"
            android:id="@+id/libraryApp"
            android:onClick="clickOnLibrary"
            android:text="@string/libraryButton"

            />

        <Button
            style="@style/appButton"
            android:id="@+id/buildItbigger"
            android:onClick="clickOnBuildIt"
            android:text="@string/buildItButton"

            />

        <Button
            style="@style/appButton"
            android:id="@+id/xyzReader"
            android:onClick="clickOnXyzReader"
            android:text="@string/xyzButton"

            />

        <Button
            style="@style/appButton"
            android:id="@+id/capStone"
            android:text="@string/capStoneButton"
            android:background="@color/colorCapStoneButton"
            />


    </LinearLayout>
</ScrollView>
